--- a/index.html
+++ b/index.html
@@ -4,14 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Api table</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
+    <style>
+        tr{
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
-    <table border="1">
+    <div class="container-fluid">
+    <div class="row justify-content-between">
+        <div class="col-8 ml-1">
+    <div class="md-form mt-0 ">
+        <input style="font-size: 1.5rem;" class="form-control" type="text" placeholder="Search" aria-label="Search">
+      </div>
+    </div>
+    <div class="col-1">
+        <select class="mdb-select md-form">
+            <option value="" disabled selected>Show</option>
+            <option value="1">10</option>
+            <option value="2">20</option>
+            <option value="3">50</option>
+            <option value="3">100</option>
+            <option value="3">186</option>
+          </select>
+    </div>
+    </div>
+    <table  class="table table-striped table-responsive-sm px-0 mx-0" cellspacing="0" width="100%"">
         <thead style="font-weight: bold;">
         </thead>
         <tbody >
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination pg-blue justify-content-center">
+          <li class="page-item">
+            <a class="page-link" tabindex="-1">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link">1</a></li>
+          <li class="page-item"><a class="page-link">2</a></li>
+          <li class="page-item"><a class="page-link">3</a></li>
+          <li class="page-item">
+            <a class="page-link">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
