--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <div class="col-1">
         <select class="mdb-select md-form">
             <option value="" disabled selected>Show</option>
-            <option value="1">10</option>
-            <option value="2">20</option>
-            <option value="3">50</option>
-            <option value="3">100</option>
-            <option value="3">186</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+            <option value="All">All</option>
           </select>
     </div>
     </div>
-    <table  class="table table-striped table-responsive-sm px-0 mx-0" cellspacing="0" width="100%"">
-        <thead style="font-weight: bold;">
+    <table border="1" class="table table-striped table-responsive-sm px-0 mx-0" cellspacing="0" width="100%"">
+        <thead>
         </thead>
         <tbody >
         </tbody>
@@ -45,13 +45,13 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination pg-blue justify-content-center">
           <li class="page-item">
-            <a class="page-link" tabindex="-1">Previous</a>
+            <a class="page-link pageleft z-depth-1">Previous</a>
           </li>
-          <li class="page-item"><a class="page-link">1</a></li>
-          <li class="page-item"><a class="page-link">2</a></li>
-          <li class="page-item"><a class="page-link">3</a></li>
+          <span id="paginationbtn">
+        </span>
           <li class="page-item">
-            <a class="page-link">Next</a>
+          
+            <a class="page-link pageright  z-depth-1">Next</a>
           </li>
         </ul>
       </nav>
